# alexandria

./: .gitignore  Cargo.toml  LICENSE
crates/alexandria/: Cargo.toml
crates/dlp/: Cargo.toml
crates/dlp/src/: lib.rs
demetrius/: package.json  pnpm-lock.yaml
demetrius/src/routes/: +page.svelte
src/: main.rs
