[package]
name = "alexandria"
version = "0.1.0"
authors = ["Jan Tebernum <jan.tebernum@gmail.com>"]
repository = "https://github.com/Gosuo/alexandria"
categories = ["archive", "video"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
