[package]
name = "mouseion"
version = "0.1.0"
authors = ["Jan Tebernum <jan.tebernum@gmail.com>"]
repository = "https://github.com/Gosuo/alexandria"
categories = ["archive", "video"]
edition = "2021"

[workspace]
members = [
    "crates/*"
]

[dependencies]
alexandria = { path = "./crates/alexandria/" }
