[package]
name = "alexandria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["tracing"] }
tokio = { version = "1.28.0", features = ["full", "tracing"] }
tracing = "0.1.37"

[lib]
doctest = false
